test/library/draft/Vector/extend/vectorExtendUnbounded.good
vectorExtendUnbounded.chpl:3: error: Cannot extend vector(int(64),false) with unbounded range(int(64),boundedLow,false)
