test/library/draft/Vector/extend/vectorExtendUnbounded.chpl
use Vector;
var v = new vector(int);
v.extend(1..);
